--- a/01-01-variables.html
+++ b/01-01-variables.html
@@ -10,6 +10,7 @@
 <body>
     <script>
         const jordans = 103;
+        const name = "Vladyslav Rutskyi";
 
         console.log(jordans);
     </script>
