--- a/01-01-variables.html
+++ b/01-01-variables.html
@@ -14,6 +14,7 @@
         const name = "Vladyslav Rutskyi";
 
         console.log(jordans);
+        console.log(name);
     </script>
 </body>
 </html>
