fixed errors => goal

--- a/01-01-variables.html
+++ b/01-01-variables.html
@@ -12,10 +12,12 @@
     <script>
         const jordans = 106;
         const name = "Vladyslav Rutskyi";
+        const brand = 3;
+        const goal = 2;
 
         console.log(jordans);
         console.log(name);
-        console.log(barnd+new);
+        console.log(barnd+goal);
     </script>
 </body>
 </html>
