--- a/01-01-variables.html
+++ b/01-01-variables.html
@@ -17,7 +17,7 @@
 
         console.log(jordans);
         console.log(name);
-        console.log(barnd+goal);
+        console.log(sum[barnd+goal]);
     </script>
 </body>
 </html>
