--- a/01-01-variables.html
+++ b/01-01-variables.html
@@ -14,10 +14,12 @@
         const name = "Vladyslav Rutskyi";
         const brand = 3;
         const goal = 2;
+        const number_of_cars = 4;
 
         console.log(jordans);
         console.log(name);
-        console.log(sum[barnd+goal]);
+        console.log(goal);
+        console.log(brand);
     </script>
 </body>
 </html>
