added 4 items to the array

--- a/03-03-arrays.html
+++ b/03-03-arrays.html
@@ -9,7 +9,12 @@
 
 <body>
     <script>
-        const somethingNew = [];
+        const somethingNew = [
+            "apple", 
+            "plum", 
+            "pear", 
+            "ananas"
+        ];
         console.log(somethingNew);
 
     </script>
