--- a/03-03-arrays.html
+++ b/03-03-arrays.html
@@ -13,7 +13,9 @@
             "apple", 
             "plum", 
             "pear", 
-            "ananas"
+            "ananas",
+            25,
+            "36"
         ];
         console.log(somethingNew);
 
