--- a/03-03-arrays.html
+++ b/03-03-arrays.html
@@ -17,7 +17,15 @@
             25,
             "36"
         ];
+        somethingNew.push("banana");
+        let fruit = somethingNew.pop();
+
         console.log(somethingNew);
+        console.log("i'm happy becuase I have a " + fruit);
+
+        let the_best = 0;
+
+        console.log(somethingNew [the_best]);
 
     </script>
     
