adding new js file with functions

--- a/03-03-arrays.html
+++ b/03-03-arrays.html
@@ -24,8 +24,10 @@
         console.log("i'm happy becuase I have a " + fruit);
 
         let the_best = 0;
-
         console.log(somethingNew [the_best]);
+
+        console.log(somethingNew.length);
+        console.log(somethingNew[somethingNew.length-5]);
 
     </script>
     
