--- a/05-05-objects.html
+++ b/05-05-objects.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="04-04-functions.js"></script>;
+    <script src="04-04-functions.js"></script>
     <script src="05-05-objects.js">
 
-    </script>;
+    </script>
     <script src="05-05-02-objects.js"></script>
 
 
