--- a/sololearn.html
+++ b/sololearn.html
@@ -10,6 +10,15 @@
     <p>I will try to practice all lessons from the Sololearn source.</p>
     <p>I hope it will be a good idea.</p>
     <li>Assignment operators = Операторы присваивания</li>
+    <li><b>Escape Character</b> looks like \</li>
+    <li>Template Literals = Шаблонные литералы</li>
+    <li>Concatenation = Конкатенация </li>
+    <li>Booleans = Булевы значения </li>
+    <li>The if statement = Инструкция if </li>
+    <li>the switch statement = Инструкция switch </li>
+
+
+
     <script src="sololearn.js"></script>
 </body>
 </html>
