--- a/sololearn.html
+++ b/sololearn.html
@@ -16,6 +16,7 @@
     <li>Booleans = Булевы значения </li>
     <li>The if statement = Инструкция if </li>
     <li>the switch statement = Инструкция switch </li>
+    <li>Ternary operator = Тернарный оператор </li>
 
 
 
