break and continue statements

--- a/sololearn.html
+++ b/sololearn.html
@@ -17,6 +17,12 @@
     <li>The if statement = Инструкция if </li>
     <li>the switch statement = Инструкция switch </li>
     <li>Ternary operator = Тернарный оператор </li>
+    <li>The for loop = Циклы <b>for</b> </li>
+    <li>The while loop = Цикл <b>while</b> </li>
+    <li>The do...while loop = Цикл do...while  </li>
+    <li>The break statement = Инструкция break </li>
+    <li>continue </li>
+    
 
 
 
