home page + css + js

--- a/sololearn.html
+++ b/sololearn.html
@@ -22,10 +22,14 @@
     <li>The do...while loop = Цикл do...while  </li>
     <li>The break statement = Инструкция break </li>
     <li>continue </li>
+    <li>Functions = Функции</li>
+    <li>Parameters = Параметры  </li>
+    <li>Returning from functions = Возвращение значений функциями </li>
     
 
 
 
     <script src="sololearn.js"></script>
+    <style src="general.css"></style>
 </body>
 </html>
