header is added

--- a/sololearn.html
+++ b/sololearn.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sololearn examples</title>
     <link href="stylesheet.css" rel="stylesheet">
-    <div class="section">
-    <h1><span> A play ground for the Sololearn JS</span> </h1>
+     <!-- header start -->
+     <div id="header" class="section">
+        <img alt="" class="img-circle" src="https://blob.sololearn.com/avatars/4cc6cd1d-02e4-43bf-8f8c-a661735d03b0.jpg">
+        <p>Vladyslav Rutskyi</p>
+    </div>
+    
 </head>
 <body>
+    <div class="section">
+        <h1><span> A play ground for the Sololearn JS</span> </h1>
     
     <p>I will try to practice all lessons from the Sololearn source.</p>
     <p>I hope it will be a good idea.</p>
