--- a/home.html
+++ b/home.html
@@ -106,6 +106,11 @@
                 </tr>
                 <tr>
                     <td>Great Learning</td>
+                    <td>JavaScript Projects</td>
+                    <td class="inprogress">In Progress</td>
+                </tr>
+                <tr>
+                    <td>Great Learning</td>
                     <td>Introduction to JavaScript</td>
                     <td class="inprogress">In Progress</td>
                 </tr>
@@ -152,12 +157,14 @@
         <div class="section">
             <h1><span>My Courses in Detailed Progress</span></h1>
             <ul>
-                
+                <li>JavaScript Projects by Great Learning<br />
+                    <progress min="0" max="100" value="0"></progress>
+                </li>
                 <li>JavaScript Intermediate by SoloLearn<br />
                     <progress min="0" max="100" value="0"></progress>
                 </li>
                 <li>Introduction to JavaScript by Great Learning<br />
-                    <progress min="0" max="100" value="33"></progress>
+                    <progress min="0" max="100" value="47"></progress>
                 </li>
                 <li>Introduction to Playwright  by TestAutomationU<br />
                     <progress min="0" max="100" value="20"></progress>
