added all links

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
                     <td >
                         <a href="https://www.sololearn.com/learn/courses/le-css" target="_blank">CSS</a>
                     </td>
-                    <td class="selected">Finished</td>
+                    <td class="selected">Completed</td>
                     <!-- <td></td>
                     <td></td>
                     <td></td> -->
@@ -63,7 +63,7 @@
                     <td>
                         <a href="https://www.sololearn.com/learn/courses/le-sql" target="_blank">SQL</a>
                     </td>
-                    <td class="selected">Finished</td>
+                    <td class="selected">Completed</td>
                     <!-- <td ></td>
                     <td></td>
                     <td></td> -->
@@ -75,7 +75,7 @@
                     <td >
                         <a href="https://www.sololearn.com/learn/courses/le-html" target="_blank">HTML</a>
                     </td>
-                    <td class="selected">Finished</td>
+                    <td class="selected">Completed</td>
                     <!-- <td></td>
                     <td></td>
                     <td></td> -->
@@ -87,7 +87,7 @@
                     <td>
                         <a href="https://www.sololearn.com/learn/courses/javascript-intermediate" target="_blank">JavaScript Intermediate</a>
                     </td>
-                    <td class="inprogress">In Progress</td>
+                    <td class="planned">Planned</td>
                     <!-- <td></td>
                     <td ></td>
                     <td></td> -->
@@ -99,53 +99,77 @@
                     <td>
                         <a href="https://www.sololearn.com/learn/courses/le-sql" target="_blank">Introduction to JavaScript</a>
                     </td>
-                    <td class="selected">Finished</td>
+                    <td class="selected">Completed</td>
                     <!-- <td></td>
                     <td ></td>
                     <td></td> -->
                 </tr>
                 <tr>
-                    <td>Great Learning</td>
-                    <td>JavaScript Projects</td>
+                    <td><a href="https://www.mygreatlearning.com/" target="_blank">Great Learning</a>
+                    </td>
+                    <td>
+                        <a href="https://olympus.mygreatlearning.com/courses/47896" target="_blank">JavaScript Projects</a>
+                    </td>
+                    <td class="planned">Planned</td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.mygreatlearning.com/" target="_blank">Great Learning</a>
+                    </td>
+                    <td><a href="https://olympus.mygreatlearning.com/courses/38643" target="_blank">Introduction to JavaScript</a>
+                    </td>
                     <td class="inprogress">In Progress</td>
                 </tr>
                 <tr>
-                    <td>Great Learning</td>
-                    <td>Introduction to JavaScript</td>
-                    <td class="inprogress">In Progress</td>
-                </tr>
-                <tr>
-                    <td>Great Learning</td>
-                    <td>GitHub Tutorial for Beginners </td>
-                    <td class="selected">Finished</td>
+                    <td><a href="https://www.mygreatlearning.com/" target="_blank">Great Learning</a>
+                    </td>
+                    <td><a href="https://olympus.mygreatlearning.com/courses/53846" target="_blank">GitHub Tutorial for Beginners</a>
+                    </td>
+                    <td class="selected">Completed</td>
                     <!-- <td></td>
                     <td></td>
                     <td class="selected">Discuss</td> -->
                 </tr>
                 <tr>
-                    <td>Great Learning</td>
-                    <td>Introduction to Automation Testing</td>
-                    <td class="selected">Finished</td>
+                    <td><a href="https://www.mygreatlearning.com/" target="_blank">Great Learning</a>
+                    </td>
+                    <td><a href="Introduction to Automation Testing" target="_blank">Introduction to Automation Testing</a>
+                    </td>
+                    <td class="selected">Completed</td>
                 </tr> 
                 <tr>
-                    <td>TestAutomationU</td>
-                    <td>Introduction to Playwright</td>
-                    <td class="inprogress">In Progress</td>
+                    <td>
+                        <a href="https://testautomationu.applitools.com" target="_blank">TestAutomationU</a>
+                    </td>
+                    <td>
+                        <a href="https://testautomationu.applitools.com/playwright-intro/" target="_blank">Introduction to Playwright</a>
+                    </td>
+                    <td class="postponed">Postponed</td>
                 </tr>               
                 <tr>
-                    <td>TestAutomationU</td>
-                    <td>Introduction to JavaScript</td>
-                    <td class="selected">Finished</td>
+                    <td>
+                        <a href="https://testautomationu.applitools.com" target="_blank">TestAutomationU</a>
+                    </td>
+                    <td><a href="https://testautomationu.applitools.com/javascript-tutorial/" target="_blank">Introduction to JavaScript</a>
+                    </td>
+                    <td class="selected">Completed</td>
                 </tr>
                 <tr>
-                    <td>TestAutomationU</td>
-                    <td>Automating in the Browser Using JavaScript</td>
-                    <td class="inprogress">In Progress</td>
+                    <td>
+                        <a href="https://testautomationu.applitools.com" target="_blank">TestAutomationU</a>
+                    </td>
+                    <td>
+                        <a href="https://testautomationu.applitools.com/automating-in-the-browser-using-javascript/" target="_blank">Automating in the Browser Using JavaScript</a>
+                    </td>
+                    <td class="postponed">Postponed</td>
                 </tr>
                 <tr>
-                    <td>TestAutomationU</td>
-                    <td>Setting a Foundation for Successful Test Automation</td>
-                    <td class="selected">Finished</td>
+                    <td>
+                        <a href="https://testautomationu.applitools.com" target="_blank">TestAutomationU</a>
+                    </td>
+                    <td>
+                        <a href="https://testautomationu.applitools.com/setting-a-foundation-for-successful-test-automation/">Setting a Foundation for Successful Test Automation</a>
+                    </td>
+                    <td class="selected">Completed</td>
                 </tr>
                                
             </table>
